[gd_scene load_steps=6 format=3 uid="uid://cv1woj7n1wk2o"]

[ext_resource type="Script" path="res://scripts/buildings/EnemySpawner.gd" id="1_spawner"]
[ext_resource type="Texture2D" uid="uid://cim6jygdkdsjp" path="res://assets/sprites/ufoRed.png" id="2_sprite"]
[ext_resource type="Texture2D" uid="uid://bsg08g4ku3nr1" path="res://assets/sprites/effects/shield2.png" id="3_glow"]

[sub_resource type="CircleShape2D" id="CircleShape2D_spawner"]
radius = 40.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.8, 0.2, 0.2, 1)

[node name="EnemySpawner" type="StaticBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 0
script = ExtResource("1_spawner")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_spawner")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.3, 0.3, 1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_sprite")

[node name="CoreGlow" type="Sprite2D" parent="."]
modulate = Color(1, 0.2, 0.2, 0.8)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_glow")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -50.0
theme_override_styles/fill = SubResource("StyleBoxFlat_health")
max_value = 500.0
value = 500.0
show_percentage = false

[node name="SpawnParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 1.5
one_shot = true
explosiveness = 0.8
direction = Vector2(0, -1)
spread = 45.0
gravity = Vector2(0, -50)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 0.3, 0.3, 1)


